--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -124,11 +124,39 @@ es:
  
         # Append your own errors here or at the model/attributes scope.
  
-      models:
-        # Overrides default messages
- 
-      attributes:
-        # Overrides model and default messages.
+    models:
+      # Overrides default messages
+      account: "cuenta"
+      admin: "admin"
+      avatar: "avatar"
+      badge: "medalla"
+      comment: "comentario"
+      country: "país"
+      favorite_team: "equipo favorito"
+      friend: "amigo"
+      friendship: "amistad"
+      group: "grupo"
+      match: "encuentro"
+      place: "lugar"
+      player: "jugador"
+      post: "entrada"
+      prediction: "pronóstico"
+      shirt: "camiseta"
+      short: "pantalon"
+      snicker: "zapatilla"
+      stadium: "estadio"
+      team: "equipo"
+      user_badge: "medalla de usuario"
+    attributes:
+      posts:
+        content: "contenido"
+        title: "título"
+        created_at: "creado"
+        updated_at: "actualizado"
+        account: "Cuenta"
+      
+      
+      # Overrides model and default messages.
  
   date:
     formats:
