Updated match info

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -136,7 +136,7 @@ es:
       friend: "amigo"
       friendship: "amistad"
       group: "grupo"
-      match: "encuentro"
+      match: "partido"
       place: "lugar"
       player: "jugador"
       post: "entrada"
