Fixed titles and comments

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -148,6 +148,9 @@ es:
       team: "equipo"
       user_badge: "medalla de usuario"
       post_image: "Imágenes"
+      gang: "mancha"
+      profile: "perfil"
+      title: "título"
     attributes:
       posts:
         content: "contenido"
